Squash some bugs

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -3,6 +3,9 @@
   width: 100%;
   height: calc(100vh - 110px);
   display: flex;
+  &.view-only {
+    height: 100vh;
+  }
 }
 
 .main-content-container {
